[tool.poetry]
name = "boytime"
version = "0.1.0"
description = ""
authors = [
    "Andre Guerra <agu3rra@pm.me>",
    "Ivan Guerra"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Creates python "binaries"
[tool.poetry.scripts]
boytime = 'boytime:gameloop'
